--- a/templates/application/application.add.twig
+++ b/templates/application/application.add.twig
@@ -19,7 +19,7 @@
                 </li>
                 <li>
                     <label for="identifier">
-                        <span class="tooltipped tooltipped-e" aria-label="Alphanumeric, hyphen, and period characters only.">
+                        <span class="hint--right" aria-label="Alphanumeric, hyphen, and period characters only.">
                             Identifier
                         </span>
                     </label>
