--- a/templates/push/start.twig
+++ b/templates/push/start.twig
@@ -202,7 +202,7 @@
 
     <tr>
         <td>
-            <span class="tooltipped tooltipped-e" aria-label="{{ deployment.server.formatHumanType }}: {{ deployment.formatMeta }}">
+            <span class="hint--right" aria-label="{{ deployment.server.formatHumanType }}: {{ deployment.formatMeta }}">
                 <a href="{{ urlFor('server', {'server': deployment.server.id}) }}">{{ deployment.formatPretty(false) }}</a>
             </span>
         </td>
