Remove kraken resources and assets (js, css)

--- a/templates/help/help.twig
+++ b/templates/help/help.twig
@@ -70,8 +70,8 @@
     </p>
 
     <p>
-        <b>Leads</b> of applications have access to a few more options such as Encrypted Properties, Deployment Targets, Kraken Schema, and more. Contact
-        an administrator if you think you may need this level of access.
+        <b>Leads</b> of applications have access to a few more options such as Encrypted Properties, Deployment Targets, and more.
+        Contact an administrator if you think you may need this level of access.
     </p>
 
     {{ macros.alert('info', 'The way Hal determines GitHub permissions has recently changed.', block('github_permission_changes')) }}
