--- a/templates/help/application-setup.twig
+++ b/templates/help/application-setup.twig
@@ -12,7 +12,7 @@
         <h1>Help - Application Setup Guide</h1>
 
         <p class="nav--page__back">
-            <a class="btn btn--small btn--back" href="{{ urlFor('help') }}">Back to Help</a>
+            <a class="btn btn--small btn--back" href="{{ uriFor('help') }}">Back to Help</a>
         </p>
     </div>
 
@@ -138,7 +138,7 @@
 
     <p>
         The same variables and environment available for builds is available during the deploy process.
-        Check out the <a href="{{ urlFor('help.deployment') }}">Deployment scripting guide</a> for more details.
+        Check out the <a href="{{ uriFor('help.deployment') }}">Deployment scripting guide</a> for more details.
     </p>
 
 {% endblock %}
