--- a/templates/help/deployment.twig
+++ b/templates/help/deployment.twig
@@ -9,7 +9,7 @@
         <h1>Help - <strong>Deployment Scripting Guide</strong></h1>
 
         <p class="nav--page__back">
-            <a class="btn btn--small btn--back" href="{{ urlFor('help') }}">Back to Help</a>
+            <a class="btn btn--small btn--back" href="{{ uriFor('help') }}">Back to Help</a>
         </p>
     </div>
 
