--- a/templates/_partial-job/build-box.twig
+++ b/templates/_partial-job/build-box.twig
@@ -13,12 +13,12 @@
             <article class="card--baby mbn card--{{ build.environment.name }}">
                 <header class="card__header split">
                     <span class="split__title">
-                        <a href="{{ urlFor('application.status', {application: build.application.id}) }}">
+                        <a href="{{ uriFor('application.status', {application: build.application.id}) }}">
                             {{ build.application.name }}
                         </a>
                     </span>
 
-                    <a href="{{ urlFor('build', {'build': build.id}) }}">
+                    <a href="{{ uriFor('build', {'build': build.id}) }}">
                         {{ macros.job_status(build) }}
                     </a>
                 </header>
