--- a/templates/_partial-job/pending-table.twig
+++ b/templates/_partial-job/pending-table.twig
@@ -17,7 +17,7 @@
                 {% if job is build %}
                     <tr id="build-{{ job.id }}">
                         <td>{{ macros.job_status_prefix(job) }}</td>
-                        <td><a href="{{ urlFor('application.status', {application: job.application.id}) }}">{{ job.application.name }}</a></td>
+                        <td><a href="{{ uriFor('application.status', {application: job.application.id}) }}">{{ job.application.name }}</a></td>
 
                         <td>{{ job.environment.name }}
 
@@ -28,7 +28,7 @@
                 {% else %}
                     <tr id="push-{{ job.id }}">
                         <td>{{ macros.job_status_prefix(job) }}</td>
-                        <td><a href="{{ urlFor('application.status', {application: job.application.id}) }}">{{ job.application.name }}</a></td>
+                        <td><a href="{{ uriFor('application.status', {application: job.application.id}) }}">{{ job.application.name }}</a></td>
 
                         {% if job.deployment %}
                             <td>{{ job.build.environment.name }} → {{ job.deployment.formatPretty(true) }}</td>
@@ -36,7 +36,7 @@
                             <td>{{ job.build.environment.name }} → Unknown</td>
                         {% endif %}
 
-                        <td>Build <a href="{{ urlFor('build', {'build': job.build.id}) }}">{{ job.build.id|formatBuildId }}</a></td>
+                        <td>Build <a href="{{ uriFor('build', {'build': job.build.id}) }}">{{ job.build.id|formatBuildId }}</a></td>
                         <td class="table-priority-55">{{ job.user ? job.user.handle : 'Unknown' }}</td>
                         <td class="table-priority-50">{{ job.created|timepoint('h:i:s A') }}</td>
                     </tr>
