--- a/templates/_partial/macros.twig
+++ b/templates/_partial/macros.twig
@@ -228,8 +228,8 @@
 
 {% macro job_status_prefix_link(job, prefix) %}
     {% if job is push %}
-        {{ prefix }}<a href="{{ urlFor('push', {'push': job.id}) }}">{{ job.id|formatPushId }}</a>
+        {{ prefix }}<a href="{{ uriFor('push', {'push': job.id}) }}">{{ job.id|formatPushId }}</a>
     {% else %}
-        {{ prefix }}<a href="{{ urlFor('build', {'build': job.id}) }}">{{ job.id|formatBuildId }}</a>
+        {{ prefix }}<a href="{{ uriFor('build', {'build': job.id}) }}">{{ job.id|formatBuildId }}</a>
     {% endif %}
 {% endmacro %}
