--- a/templates/help/github-permissions.twig
+++ b/templates/help/github-permissions.twig
@@ -8,7 +8,7 @@
         <h1>Help - <strong>GitHub Permissions</strong></h1>
 
         <p class="nav--page__back">
-            <a class="btn btn--small btn--back" href="{{ urlFor('help') }}">Back to Help</a>
+            <a class="btn btn--small btn--back" href="{{ uriFor('help') }}">Back to Help</a>
         </p>
     </div>
 
