--- a/templates/help/help.twig
+++ b/templates/help/help.twig
@@ -8,8 +8,8 @@
 {% block content %}
     <h1>Help &amp; FAQ</h1>
 
-    <a class="btn" href="{{ urlFor('help.setup') }}">Application Setup Guide</a>
-    <a class="btn" href="{{ urlFor('help.deployment') }}">Deployment Scripting Guide</a>
+    <a class="btn" href="{{ uriFor('help.setup') }}">Application Setup Guide</a>
+    <a class="btn" href="{{ uriFor('help.deployment') }}">Deployment Scripting Guide</a>
 
     <ul class="list--bare">
         <li class="trailer">
@@ -17,7 +17,7 @@
             <ul class="list--bullet">
                 <li><a href="#permission">Who should I contact for support or permission changes?</a></li>
                 <li><a href="#bugs">Who should I contact regarding bugs or feature requests?</a></li>
-                <li><a href="{{ urlFor('help.githubpermissions') }}">I'm a GitHub repository collaborator but am unable to build or push. Help!</a></li>
+                <li><a href="{{ uriFor('help.github_permissions') }}">I'm a GitHub repository collaborator but am unable to build or push. Help!</a></li>
             </ul>
         </li>
 
@@ -98,7 +98,7 @@
         <li>
             <strong>Projects belong to groups. Determine what group your application should be part of, or create a new group.</strong>
             <p>
-                Projects are often grouped by team or business area. You can see the ones that already exist by viewing the <a href="{{ urlFor('applications') }}">Applications page</a>.
+                Projects are often grouped by team or business area. You can see the ones that already exist by viewing the <a href="{{ uriFor('applications') }}">Applications page</a>.
             </p>
         </li>
         <li>
@@ -111,7 +111,7 @@
             <strong>Add a <code>.hal9000.yml</code> configuration file to your project.</strong>
             <p>
                 The hal configuration file is used to tell Hal how to build and deploy your application.
-                Please see <a href="{{ urlFor('help.deployment') }}">deployment scripting guide</a> for full details.
+                Please see <a href="{{ uriFor('help.deployment') }}">deployment scripting guide</a> for full details.
             </p>
         </li>
         <li>
@@ -134,7 +134,7 @@
         <li>Script (Applications define their deployment process in scripts)</li>
         <li>R Sync (On-premise unix servers)</li>
     </ul>
-    <p>See the <a href="{{ urlFor('help.setup') }}">application setup guide</a> for how to set up your application for on premise or AWS.</p>
+    <p>See the <a href="{{ uriFor('help.setup') }}">application setup guide</a> for how to set up your application for on premise or AWS.</p>
 
     <h3 id="application-deployment">{{ macros.status_icon('How do I use a script to build or deploy my application?') }}</h3>
     <p>
@@ -146,7 +146,7 @@
         But be careful! This involves writing your own scripts and requires engineering.
     </p>
 
-    <p>Read more in the <a href="{{ urlFor('help.deployment') }}">deployment scripting guide</a>.</p>
+    <p>Read more in the <a href="{{ uriFor('help.deployment') }}">deployment scripting guide</a>.</p>
 
     <h3 id="dotnet-support">{{ macros.status_icon('Does Hal support .NET applications?') }}</h3>
     <p>Hal can deploy any application to AWS-based deployment targets such as Elastic Beanstalk and CodeDeploy including both linux and windows-based applications.</p>
@@ -168,7 +168,7 @@
         This ensures reproducible builds by having a fresh container with consistent system configuration for every build.
         Applications can even use a custom, dedicated container if needed.
     </p>
-    <p>Read more in the <a href="{{ urlFor('help.deployment') }}">deployment scripting guide</a>.</p>
+    <p>Read more in the <a href="{{ uriFor('help.deployment') }}">deployment scripting guide</a>.</p>
 
     <h3 id="encrypted-configuration">{{ macros.status_icon('Does Hal support encrypted configuration?') }}</h3>
     <p>
@@ -178,7 +178,7 @@
     <p>
         Administrators and Project Leads can add encrypted properties from the Application page. Values can be stored for individual environments, or globally so they can be used in every environment.
     </p>
-    <p>See in the <a href="{{ urlFor('help.deployment') }}">deployment scripting guide for engineers</a> for more details on how to read these values when they are decrypted during the build process.</p>
+    <p>See in the <a href="{{ uriFor('help.deployment') }}">deployment scripting guide for engineers</a> for more details on how to read these values when they are decrypted during the build process.</p>
 
     <h3 id="app-dependencies">{{ macros.status_icon('My application needs a specific library or software installed to build. What do I do?') }}</h3>
     <p>
@@ -193,11 +193,11 @@
 {% block other_questions %}
     <h3 id="api">{{ macros.status_icon('Does Hal have an API? Is there any documentation?') }}</h3>
     <p>
-        Hal has a hypermedia REST API here: <a href="{{ urlFor('api.index') }}">/api</a>. Please note that this API is mostly
+        Hal has a hypermedia REST API here: <a href="{{ uriFor('api.index') }}">/api</a>. Please note that this API is mostly
         limited to reads at the current time. With the exception of creating builds, actions cannot be performed through the API.
 
     </p>
-    <p>Documentation is located at <a href="{{ urlFor('api.docs') }}">/docs/api</a>.</p>
+    <p>Documentation is located at <a href="{{ uriFor('api.docs') }}">/docs/api</a>.</p>
 
     <h3 id="maintenance">{{ macros.status_icon('When is Hal updated? When does maintenance occur?') }}</h3>
     <p>
@@ -212,7 +212,7 @@
 
     <h3 id="release-notes">{{ macros.status_icon('Release Notes') }}</h3>
     <p>
-        Details about the latest release are always available at <a href="{{ urlFor('latest.release') }}">/latest-release</a>.
+        Details about the latest release are always available at <a href="{{ uriFor('latest.release') }}">/latest-release</a>.
     </p>
     {% include '_partial/help.release-notes.twig' %}
 {% endblock %}
@@ -223,5 +223,5 @@ With GitHub Enterprise 2.1, features that Hal relied on to determine engineer pe
 Previously, Hal could check whether users were repository collaborators, but must now check if users are <b>public</b>
 members of the organization that owns the repository.
 
-Please see <a href="{{ urlFor('help.githubpermissions') }}">these instructions </a> for how to make your github organizational status public.
+Please see <a href="{{ uriFor('help.github_permissions') }}">these instructions </a> for how to make your github organizational status public.
 {% endblock %}
