--- a/templates/dashboard.twig
+++ b/templates/dashboard.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'base.twig' %}
 {% import "_partial/macros.twig" as macros %}
 {% set js_components = ["queue"] %}
 
