--- a/templates/help/deployment.twig
+++ b/templates/help/deployment.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'base.twig' %}
 {% import "_partial/macros.twig" as macros %}
 
 {% set page_title = 'Help : Deployment' %}
