--- a/templates/styleguide.html.twig
+++ b/templates/styleguide.html.twig
@@ -71,7 +71,7 @@
                 <h1>Style Components</h1>
 
                 <p class="nav--page__back">
-                    <a class="btn btn--small btn--back" href="{{ urlFor('styleguide.icons') }}">Icons</a>
+                    <a class="btn btn--small btn--back" href="{{ uriFor('styleguide.icons') }}">Icons</a>
                 </p>
             </div>
 
@@ -151,7 +151,7 @@
 
             <hr><h2>Icons</h2><hr>
             <section>
-                <a href="{{ urlFor('styleguide.icons') }}">List of icons</a>
+                <a href="{{ uriFor('styleguide.icons') }}">List of icons</a>
 
                 <p class="mtm mbn">Usage:</p>
                 <pre class="mbm">{{ macros.icon()|e('html') }}</pre>
