--- a/templates/styleguide.icons.html.twig
+++ b/templates/styleguide.icons.html.twig
@@ -413,7 +413,7 @@ zoom-out-2
                 <h1>Style Components - Icons</h1>
 
                 <p class="nav--page__back">
-                    <a class="btn btn--small btn--back" href="{{ urlFor('styleguide') }}">Back to Style Components</a>
+                    <a class="btn btn--small btn--back" href="{{ uriFor('styleguide') }}">Back to Style Components</a>
                 </p>
             </div>
 
