--- a/templates/queue.history.twig
+++ b/templates/queue.history.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'base.twig' %}
 {% import '_partial/pagination.twig' as pagination %}
 {% import "_partial/macros.twig" as macros %}
 
@@ -14,65 +14,8 @@
 
     {{ paginationblock }}
 
-    {{ block('queuehistory') }}
+    {% include '_partial-job/pending-table.twig' with {'pending': pending, 'history_view': true} only %}
 
     {{ paginationblock }}
 
-{% endblock %}
-
-{% block queuehistory %}
-    <table id="js-queue" class="table--spacing-medium" data-tablesaw-mode="stack">
-        <thead>
-            <tr>
-                <th>Type</th>
-                <th>Application</th>
-                <th>Env → Server</th>
-                <th>Reference</th>
-                <th class="table-priority-55">User</th>
-                <th class="table-priority-50">Time</th>
-            </tr>
-        </thead>
-        <tbody>
-                {% for job in pending %}
-                    <tr>
-                        <td>{{ macros.job_status_prefix(job) }}</td>
-
-                        <td>
-                            <a href="{{ urlFor('application.status', {application: job.application.id}) }}">{{ job.application.name }}</a>
-                        </td>
-
-                        <td>
-                            {% if job is build %}
-                                {{ job.environment.name }}
-                            {% elseif job.deployment %}
-                                {{ job.build.environment.name }} → {{ job.deployment.formatPretty(true) }}
-                            {% else %}
-                                {{ job.build.environment.name }} → Unknown
-                            {% endif %}
-                        </td>
-
-                        <td>
-                            {% if job is build %}
-                                {{ macros.gitref(job, true) }}
-                            {% else %}
-                                Build <a href="{{ urlFor('build', {'build': job.build.id}) }}">{{ job.build.id|formatBuildId }}</a>
-                            {% endif %}
-                        </td>
-
-                        <td class="table-priority-55">
-                            {{ job.user ? job.user.handle : 'Unknown' }}
-                        </td>
-
-                        <td class="table-priority-50">
-                            {{ job.created|timepoint('h:i:s A') }}
-                        </td>
-
-                    </tr>
-                {% else %}
-                    <tr id="js-emptyQueue">
-                        <td colspan="6">There is no queue history for this date.</td>
-                    </tr>
-                {% endfor %}
-        </tbody>
-    </table>
 {% endblock %}
