updating admin middleware

--- a/templates/denied.twig
+++ b/templates/denied.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'base.twig' %}
 
 {% set page_title = "Access Denied" %}
 {% set html_id = 'error-page' %}
