--- a/templates/server/server.edit.twig
+++ b/templates/server/server.edit.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'base.twig' %}
 {% import "_partial-form/macros.twig" as form_macros %}
 
 {% set page_title = 'Edit Server : ' ~ server.name %}
@@ -71,7 +71,7 @@
 
             <ul class="button-list">
                 <li><input class="btn btn--action" type="submit" value="Save Changes"></li>
-                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ urlFor('server', {'server': server.id}) }}">Cancel</a></li>
+                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ uriFor('server', {'server': server.id}) }}">Cancel</a></li>
             </ul>
         </div>
 
